<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/activity_main">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:id="@+id/recipes_list">

           <!--<androidx.fragment.app.FragmentContainerView
               android:id="@+id/recipe"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:name="de.itGarten.carrot.ui.main.Recipe"/>-->

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/appbar_padding">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe2"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="@dimen/recipe_image_width"
                            android:layout_height="@dimen/recipe_image_height"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/flammkuchen"
                            android:contentDescription="@string/todo" />

                        <LinearLayout
                            android:id="@+id/linearLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zuletzt_zubereitet_am" />
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:tint="@color/colorPrimaryDark"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo" />
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/appbar_padding">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe3"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="@dimen/recipe_image_width"
                            android:layout_height="@dimen/recipe_image_height"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/nudeln_mit_pesto"
                            android:contentDescription="@string/todo" />

                        <LinearLayout
                            android:id="@+id/linearLayout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zuletzt_zubereitet_am" />
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:tint="@color/colorPrimaryDark"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/appbar_padding">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recipe3"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/colorPrimaryDark" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="@dimen/recipe_image_width"
                            android:layout_height="@dimen/recipe_image_height"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/nudeln_mit_pesto"
                            android:contentDescription="@string/todo" />

                        <LinearLayout
                            android:id="@+id/linearLayout4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/zuletzt_zubereitet_am" />
                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:tint="@color/colorPrimaryDark"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo"/>
                                <ImageView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:srcCompat="@android:drawable/ic_menu_recent_history"
                                    android:contentDescription="@string/todo" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>